# diesel-gen

./: .gitignore  Cargo.toml  build.rs  diesel-gen.schema.json  diesel-gen.toml  diesel-gen.yaml  diesel.toml  rustfmt.toml
src/: cli.rs  config.rs  generate.rs  lib.rs  main.rs  parse.rs  util.rs  write.rs
src/db/model/: mod.rs
src/db/schema/: mod.rs
src/gql/: mod.rs
src/test_data/: schema.rs
src/write/: async_graphql.rs  mod.rs
