[package]
name = "diesel-gen"
version = "0.3.13"
authors = ["Clarence Manuel <rencedm112@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Provides different tools for projects using the diesel_cli."
readme = "README.md"
documentation = "https://github.com/abbychau/diesel-gen/blob/master/README.md"
homepage = "http://abby.md"
repository = "https://github.com/cs-clarence/diesel-gen"
keywords = ["diesel", "codegen", "cli", "diesel_cli"]
edition = "2021"

[[bin]]
name = "diesel-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
convert_case = "0.6.0"
toml = "0.7.6"
thiserror = "1.0.47"
