[package]
name = "diesel-gen"
version = "0.1.0"
authors = ["Clarence Manuel <rencedm112@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Provides codegen to reduce writing boilerplate when using diesel"
readme = "README.md"
documentation = "https://github.com/abbychau/diesel-gen/blob/master/README.md"
homepage = "http://abby.md"
repository = "https://github.com/cs-clarence/diesel-gen"
keywords = ["diesel", "codegen", "cli", "diesel_cli"]
edition = "2021"

[[bin]]
name = "diesel-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.6"
thiserror = "1.0.47"
Inflector = "0.11.4"
anyhow = "1.0.75"
